# leaguepedia_parser

./: .gitignore  LICENSE  pyproject.toml  requirements.txt
leaguepedia_parser/: __init__.py
leaguepedia_parser/parsers/: match_parser.py
leaguepedia_parser/transmuters/: field_names.py  match.py  tournament.py
tests/: test_team.py
